# CSC746_Project

./: CMakeLists.txt  README.md  count_words  count_words.cpp  count_words.py  job.in  likwid-stuff.h  omp_count_words.cpp
